--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       width: 340px;
       border-radius: 10px;
       background-color: hsl(216, 50%, 16%);
+      margin-top: 100px;
     }
 
     .nft-image {
